# broll-harness

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: __init__.py  config.py  database.py  main.py
app/models/: video.py
app/routers/: download.py  library.py  projects.py  search.py
app/services/: archive_service.py  download_service.py  pexels_service.py  pixabay_service.py  youtube_service.py
app/templates/: index.html
docker/: Dockerfile  docker-compose.yml
