[project]
name = "broll-harness"
version = "0.1.1"
description = "Local research workbench for finding, previewing, and archiving royalty-free video clips"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.36",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.20",
    "aiofiles>=23.2.1",
    "black>=26.1.0",
    "ruff>=0.15.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
